1.新增媒体库超过1G视频不能选中的效果; 2.对提示弹窗进行多语言适配显示.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,6 @@ dependencies {
         exclude group: "com.android.support"
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-//    implementation project(':media')
-    implementation 'com.github.demoned:AlbumMedia:1.0.6'
+    implementation project(':media')
+//    implementation 'com.github.demoned:AlbumMedia:1.0.6'
 }
