--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
         exclude group: "com.android.support"
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation project(':media')
-//    implementation 'com.github.demoned:AlbumMedia:1.0.7'
-    implementation 'com.linkedin.android.litr:litr:1.5.5'
+//    implementation project(':media')
+    implementation 'com.github.demoned:AlbumMedia:1.0.8'
 }
